profile pic issue is fixed

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vinay Kanuku | B.Tech IT Student & ML Enthusiast</title>
+    <title>Vinay</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -36,7 +36,7 @@
                     <h1 class="name-3d">Vinay Kanuku</h1>
                 </div>
                 <div class="about-image">
-                    <img src="/portofolio/assets/vinay.png" alt="Vinay Kanuku">
+                    <img src="/assets/vinay.png" alt="Vinay Kanuku">
                 </div>
             </div>
             <h2>B.Tech IT Student & ML Enthusiast</h2>
@@ -95,7 +95,7 @@
                 </div>
                 <div class="project-card" data-github="https://github.com/vinaykanuku/customer-churn-prediction">
                     <div class="project-image">
-                        <img src="/portofolio/assets/projetc/churn.png" alt="Customer Churn Prediction">
+                        <img src="/assets/projetc/churn.png" alt="Customer Churn Prediction">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Customer Churn Prediction</h3>
