--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <h1 class="name-3d">Vinay Kanuku</h1>
                 </div>
                 <div class="about-image">
-                    <img src="/assets/vinay.png" alt="Vinay Kanuku">
+                    <img src="assets/1741357601824.jpeg" alt="Vinay Kanuku">
                 </div>
             </div>
             <h2>B.Tech IT Student & ML Enthusiast</h2>
@@ -52,10 +52,13 @@
             </div>
             <div class="about-container">
                 <div class="about-text">
-                    <p class="about-description">I'm Vinay, an engineering student passionate about AI, machine learning, and building real-world solutions. I thrive on
-                    understanding how things work under the hood and applying that knowledge to create impactful projects. Currently, I’m
-                    focused on mastering industry-level ML, software development, and automation. Beyond tech, I’m deeply interested in
-                    entrepreneurship, self-learning, and personal growth.</p>
+                    <p class="about-description">I'm Vinay, an engineering student passionate about AI, machine
+                        learning, and building real-world solutions. I thrive on
+                        understanding how things work under the hood and applying that knowledge to create impactful
+                        projects. Currently, I’m
+                        focused on mastering industry-level ML, software development, and automation. Beyond tech, I’m
+                        deeply interested in
+                        entrepreneurship, self-learning, and personal growth.</p>
                 </div>
                 <ul class="skills-list">
                     <li>Python</li>
