update project section

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
                 <div class="name-container">
                     <h1 class="name-3d">Vinay Kanuku</h1>
                 </div>
-                <div class="about-image">
-                    <img src="assets/1741357601824.jpeg" alt="Vinay Kanuku">
-                </div>
+                <!-- <div class="about-image">
+                    <img src="assets/vinay.png" alt="Vinay Kanuku">
+                </div> -->
             </div>
             <h2>B.Tech IT Student & ML Enthusiast</h2>
             <p class="header-text">I’m a B.Tech Information Technology student, highly inspired by machine learning and
@@ -80,25 +80,28 @@
                 <h3>Projects</h3>
             </div>
             <div class="projects-grid">
-                <div class="project-card" data-github="https://github.com/vinaykanuku/sentiment-analysis">
+                <div class="project-card" data-github="https://github.com/Vinay-kanuku/end-to-end-RAG">
                     <div class="project-image">
-                        <img src="https://via.placeholder.com/350x200" alt="Sentiment Analysis">
+                        <img src="assets/projetc/rag.png" alt="RAG AI Tutor">
                     </div>
                     <div class="project-content">
-                        <h3 class="project-title">Sentiment Analysis with ML</h3>
-                        <p class="project-description">Developed a sentiment analysis model using classic ML algorithms
-                            (e.g., Naive Bayes, SVM) to classify social media posts, with Python, MLflow for tracking,
-                            and Docker for deployment.</p>
+                        <h3 class="project-title">End to End RAG </h3>
+                        <p class="project-description">This project is a Retrieval-Augmented Generation (RAG) system designed to ingest, process, and summarize content from
+                        diverse sources, including YouTube videos, web articles, and PDFs.</p>
                         <div class="project-tech">
                             <span class="tech-tag">Python</span>
-                            <span class="tech-tag">MLflow</span>
+                            <span class="tech-tag">LangChain</span>
+                            <span class="tech-tag">Qdrant</span>
+                            <span class="tech-tag">Sentence Transformers</span>
                             <span class="tech-tag">Docker</span>
+                        
+
                         </div>
                     </div>
                 </div>
                 <div class="project-card" data-github="https://github.com/vinaykanuku/customer-churn-prediction">
                     <div class="project-image">
-                        <img src="/assets/projetc/churn.png" alt="Customer Churn Prediction">
+                        <img src="assets/projetc/churn.png" alt="Customer Churn Prediction">
                     </div>
                     <div class="project-content">
                         <h3 class="project-title">Customer Churn Prediction</h3>
